--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ click-plugins==1.1.1
 click-repl==0.2.0
 colorful==0.5.4
 constantly==15.1.0
+coverage==5.5
 cryptography==3.4.7
 cssselect2==0.4.1
 curtsies==0.3.5
@@ -61,6 +62,7 @@ idna==2.10
 imbalanced-learn==0.8.0
 imblearn==0.0
 incremental==21.3.0
+iniconfig==1.1.1
 joblib==1.0.1
 kiwisolver==1.3.1
 kombu==5.1.0
@@ -74,10 +76,12 @@ pandas==1.3.1
 pandas-datareader==0.10.0
 pathtools==0.1.2
 Pillow==8.3.1
+pluggy==0.13.1
 prettyprinter==0.18.0
 prompt-toolkit==3.0.19
 protobuf==3.17.3
 psycopg2-binary==2.9.1
+py==1.10.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycodestyle==2.7.0
@@ -92,6 +96,8 @@ pyparsing==2.4.7
 PyPDF2==1.26.0
 pyphen==0.11.0
 PyPika==0.48.8
+pytest==6.2.4
+pytest-django==4.4.0
 python-bidi==0.4.2
 python-dateutil==2.8.1
 python3-openid==3.2.0
