--- a/Pipfile
+++ b/Pipfile
@@ -61,6 +61,9 @@ autopep8 = "*"
 pytest = "*"
 pytest-django = "*"
 coverage = "*"
+wheel = "*"
+fonttools = "*"
+python-dateutil = "*"
 
 [dev-packages]
 
