--- a/requirements.txt
+++ b/requirements.txt
@@ -4,27 +4,22 @@ asgiref==3.3.4
 attrs==21.2.0
 autobahn==21.3.1
 Automat==20.2.0
-autopep8==1.5.7
 billiard==3.6.4.0
 blessings==1.7
 bpython==0.21
 Brotli==1.0.9
 cachetools==4.2.2
-cairocffi==1.2.0
-CairoSVG==2.5.2
 celery==5.1.2
 certifi==2021.5.30
-cffi==1.14.5
+cffi==1.14.6
 channels==3.0.4
-chardet==4.0.0
-charset-normalizer==2.0.0
+charset-normalizer==2.0.4
 click==7.1.2
 click-didyoumean==0.0.3
 click-plugins==1.1.1
 click-repl==0.2.0
 colorful==0.5.4
 constantly==15.1.0
-coverage==5.5
 cryptography==3.4.8
 cssselect2==0.4.1
 curtsies==0.3.5
@@ -32,7 +27,7 @@ cwcwidth==0.1.4
 cycler==0.10.0
 daphne==3.0.2
 defusedxml==0.7.1
-Django==3.2.6
+Django==3.2.7
 django-allauth==0.45.0
 django-countries==7.2.1
 django-extensions==3.1.3
@@ -47,57 +42,49 @@ Faker==8.12.1
 fonttools==4.26.2
 fpdf==1.7.2
 future==0.18.2
-google-api-core==2.0.0
-google-api-python-client==2.18.0
-google-auth==2.0.1
+google-api-core==2.0.1
+google-api-python-client==2.19.1
+google-auth==2.0.2
 google-auth-httplib2==0.1.0
-google-auth-oauthlib==0.4.5
+google-auth-oauthlib==0.4.6
 googleapis-common-protos==1.53.0
-greenlet==1.1.0
+greenlet==1.1.1
 gunicorn==20.1.0
 html5lib==1.1
 httplib2==0.19.1
 hyperlink==21.0.0
-idna==2.10
+idna==3.2
 imbalanced-learn==0.8.0
 imblearn==0.0
 incremental==21.3.0
-iniconfig==1.1.1
 joblib==1.0.1
-kiwisolver==1.3.1
+kiwisolver==1.3.2
 kombu==5.1.0
 lxml==4.6.3
 matplotlib==3.4.3
 numpy==1.21.2
 oauthlib==3.1.1
 openpyxl==3.0.7
-packaging==21.0
 pandas==1.3.2
 pandas-datareader==0.10.0
 pathtools==0.1.2
-Pillow==8.3.1
-pluggy==0.13.1
+Pillow==8.3.2
 prettyprinter==0.18.0
-prompt-toolkit==3.0.19
+prompt-toolkit==3.0.20
 protobuf==3.17.3
 psycopg2-binary==2.9.1
-py==1.10.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-pycodestyle==2.7.0
 pycparser==2.20
-pydyf==0.0.3
-Pygments==2.9.0
+pydyf==0.1.1
+Pygments==2.10.0
 PyHamcrest==2.0.2
 PyJWT==2.1.0
-PyMuPDF==1.18.16
 pyOpenSSL==20.0.1
 pyparsing==2.4.7
 PyPDF2==1.26.0
 pyphen==0.11.0
 PyPika==0.48.8
-pytest==6.2.4
-pytest-django==4.4.0
 python-bidi==0.4.2
 python-dateutil==2.8.2
 python3-openid==3.2.0
@@ -108,7 +95,7 @@ requests==2.26.0
 requests-oauthlib==1.3.0
 rsa==4.7.2
 scikit-learn==0.24.2
-scipy==1.7.0
+scipy==1.7.1
 seaborn==0.11.2
 service-identity==21.1.0
 simplejson==3.17.5
@@ -117,17 +104,17 @@ sqlparse==0.4.1
 stripe==2.60.0
 termcolor==1.1.0
 text-unidecode==1.3
-threadpoolctl==2.1.0
+threadpoolctl==2.2.0
 timeago==1.0.15
 tinycss2==1.1.0
-toml==0.10.2
 Twisted==20.3.0
 txaio==21.2.1
+typing-extensions==3.10.0.2
 uritemplate==3.0.1
 urllib3==1.26.6
 vine==5.0.0
 wcwidth==0.2.5
-weasyprint==53.1
+weasyprint==53.2
 webencodings==0.5.1
 whitenoise==5.3.0
 xhtml2pdf==0.2.5
