--- a/Pipfile
+++ b/Pipfile
@@ -35,6 +35,7 @@ pypika = "*"
 openpyxl = "*"
 pandas = "*"
 xlrd = "*"
+xlwt = "*"
 pandas-datareader = "*"
 numpy = "*"
 timeago = "*"
@@ -43,9 +44,7 @@ reportlab = "*"
 matplotlib = "*"
 scikit-learn = "*"
 seaborn = "*"
-xlwt = "*"
 fpdf = "*"
-pymupdf = "*"
 imblearn = "*"
 google-api-python-client = "*"
 google-auth-httplib2 = "*"
@@ -53,18 +52,7 @@ google-auth-oauthlib = "*"
 twisted = "==20.3.0"
 asgiref = "==3.3.4"
 setuptools = "*"
-pip = "*"
-google-api-core = "*"
-requests = "*"
-google-auth = "*"
-autopep8 = "*"
-pytest = "*"
-pytest-django = "*"
-coverage = "*"
-wheel = "*"
-fonttools = "*"
-python-dateutil = "*"
-cryptography = "*"
+django-cleanup = "*"
 
 [dev-packages]
 
