--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ daphne==3.0.2
 defusedxml==0.7.1
 Django==3.2.7
 django-allauth==0.45.0
+django-cleanup==5.2.0
 django-countries==7.2.1
 django-extensions==3.1.3
 django-ipware==4.0.0
